V1 폐기, V3 추가
