# routes/v1/user/index.js
@@ -1,9 +1,0 @@
-const express = require('express');
-const router = express.Router();
-const auth = require('./auth');
-const parcel = require('./parcel');
-
-router.use('/auth', auth)
-router.use('/parcel', parcel)
-
-module.exports = router;
